sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/plex/ingress-plex.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingress-route-plex
spec:
  ingressClassName: ingress-public
  entryPoints:
    - plex
  routes:
    - match: HostSNI(`*`)
      services:
        - name: plex-plex-media-server
          port: 32406
  tls:
    passthrough: true
