sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/plex/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: plex
  namespace: plex
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: plex-media-server
      app.kubernetes.io/instance: plex
  ingress:
    # Allow traffic from Traefik Public
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik-public
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP

  egress:
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    # Allow egress to other Plex servers (World)
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "32400"
              endPort: 32410
              protocol: TCP
    # Allow egress to Plex Services
    - toFQDNs:
        - matchPattern: "**.sin.plex.bz"
        - matchPattern: "**.plex.tv"
        - matchPattern: "**.plex.direct"
        - matchPattern: "**.plexapp.com"
        - matchName: "proxy.plex.bz"
        - matchName: "meta.plex.bz"
        - matchName: "plex.tv"
        - matchName: "image.tmdb.org"
        - matchName: "secure.gravatar.com"
        - matchName: "i0.wp.com" # Thumbnail scraping
        - matchName: "artworks.thetvdb.com"
        - matchName: "assets.fanart.tv"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
